# code_generator

./: .flake8  .gitignore  Makefile  README.md  go.mod  main.py  pyproject.toml  result.json
helpers/go/: main.go
helpers/rust/: rust_parser.rs
tests/: test_convert_source_language.py  test_extract.py
tests/fixtures/: python_code.py  rust-go-11:01:22.367931.md  rust-to-go.go
tests/fixtures/responses-domain-messagebus/: rust-go-13:58:02.546878-client_manager.md  rust-go-13:58:08.177476-client_manager.md  rust-go-13:58:08.205275-message_exchange.md  rust-go-13:58:09.617328-client_manager.md  rust-go-13:58:10.572290-client_manager.md  rust-go-13:58:12.076292-client_manager.md  rust-go-13:58:12.689162-channels.md  rust-go-13:58:13.106208-message_exchange.md  rust-go-13:58:13.108401-message_exchange.md  rust-go-13:58:13.617479-message_exchange_test.md  rust-go-13:58:13.624338-channels.md  rust-go-13:58:13.660489-client_manager.md  rust-go-13:58:13.901298-client_manager.md  rust-go-13:58:14.332017-client_manager.md  rust-go-13:58:14.639370-channels.md  rust-go-13:58:16.483022-message_exchange.md  rust-go-13:58:16.890246-message_exchange.md  rust-go-13:58:16.985470-channels.md  rust-go-13:58:17.005532-message_exchange.md  rust-go-13:58:17.053192-message_exchange_test.md  rust-go-13:58:17.217616-message_exchange.md  rust-go-13:58:18.342571-message_exchange.md  rust-go-13:58:18.700488-message_exchange_test.md  rust-go-13:58:18.788074-message_exchange.md  rust-go-13:58:19.448602-channels.md  (+29 more)
tests/parsers/: test_go_parser.py  test_rust_parser.py
(+120 files in other folders)
